# caffe_ros

./: README.md
caffe_ros/: README.md  parse_folders.py
caffe_ros/include/caffe_ros/: #segnet.h#  caffe_ros.h  segnet.h  segnet.h~
caffe_ros/launch/: gscam.launch  gscam.launch~  segnet.launch  twoDNNs.launch
caffe_ros/src/: caffe_ros.cpp
caffe_ros/tests/: tests.cpp  tests_basic.launch
image_pub/: CMakeLists.txt
image_pub/src/: image_pub_node.cpp
output_view/: CMakeLists.txt  color_mapping.lut  package.xml
output_view/include/output_view/: segnet.h
output_view/launch/: segnet-viz.launch
output_view/src/: output_view.cpp
